<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_Abfuellmodul" Id="{735a87f2-dd00-4b8e-8fa6-60d88a866885}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Abfuellmodul
VAR_INPUT
	bEnable : BOOL;
	bExecute : BOOL;
	nstation : INT;
	
    // Vereinzelungs-Sensoren
    bEinzelSens1 : BOOL;
    bEinzelSens2 : BOOL;
    bEinzelSens3 : BOOL;
    bEinzelSens4 : BOOL;
 		
	// Foerderband-Sensoren
	bBandSens1 : BOOL;
	bBandSens2 : BOOL;
	bBandSens3 : BOOL;
	bBandSens4 : BOOL;
	
	bstopper1 : BOOL;
	bstopper2 : BOOL;
	bstopper3 : BOOL;
	
END_VAR
VAR_OUTPUT
	estate : eBetriebszustand;
	bgate1 : BOOL;
	bgate2 : BOOL;
END_VAR
VAR
	fbVereinzelung : FB_Vereinzelung;
	fbTransport : FB_Transport;
	fbDispenser1 : FB_Dispenser;
	fbDispenser2 : FB_Dispenser;
	fbDispenser3 : FB_Dispenser;
	nstate : INT := 0;
END_VAR
VAR_IN_OUT
    // Achsen-Referenzen 
    axTransport: AXIS_REF;   // Foerderband‐Achse
    axDisp1    : AXIS_REF;   // Dispenser 1
    axDisp2    : AXIS_REF;   // Dispenser 2
    axDisp3    : AXIS_REF;   // Dispenser 3
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbVereinzelung(
	benable:= , 
	bexecute:= , 
	bsensor1:= bEinzelSens1, 
	bsensor2:= bEinzelSens2, 
	bsensor3:= bEinzelSens3, 
	bsensor4:= bEinzelSens4, 
	bgate1=> bgate1, 
	bgate2=> bgate2, 
	estate=> );

fbTransport(
	bEnable:= , 
	bExecute:= , 
	nstation:= nstation, 
	bSens1:= bBandSens1, 
	bSens2:= bBandSens2, 
	bSens3:= bBandSens3, 
	bSens4:= bBandSens4, 
	eState=> , 
	bstopper1=> bstopper1, 
	bstopper2=> bstopper2, 
	bstopper3=> bstopper3, 
	ax:= axTransport);
	
fbDispenser1(
	benable:= , 
	bexecute:= , 
	rVelocity:= 10, 
	rDistance:= 10, 
	estate=> , 
	ax:= axDisp1);
	
fbDispenser2(
	benable:= , 
	bexecute:= , 
	rVelocity:= 10, 
	rDistance:= 10, 
	estate=> , 
	ax:= axDisp2);
	
fbDispenser3(
	benable:= , 
	bexecute:= , 
	rVelocity:= 10, 
	rDistance:= 10, 
	estate=> , 
	ax:= axDisp3);
	

CASE nstate OF 
	0: // Off
	fbVereinzelung.benable := FALSE;
	fbTransport.bEnable := FALSE;
	fbDispenser1.bEnable := FALSE;
	fbDispenser2.bEnable := FALSE;
	fbDispenser3.bEnable := FALSE;
	
	
	fbVereinzelung.bexecute := FALSE;
	fbTransport.bExecute := FALSE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	eState :=eBetriebszustand.off;
	
	IF bEnable THEN
		nstate := 10; // Init
	END_IF
	
	10: // Init
	fbVereinzelung.benable := TRUE;
	fbTransport.bEnable := TRUE;
	fbDispenser1.bEnable := TRUE;
	fbDispenser2.bEnable := TRUE;
	fbDispenser3.bEnable := TRUE;
	
	
	fbVereinzelung.bexecute := FALSE;
	fbTransport.bExecute := FALSE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	eState :=eBetriebszustand.init;
	
	IF fbVereinzelung.estate = eBetriebszustand.ready AND 
		fbTransport.estate = eBetriebszustand.ready THEN
		nstate := 20; // Ready
	END_IF
	
	20: // Ready
	fbVereinzelung.benable := TRUE;
	fbTransport.bEnable := TRUE;
	fbDispenser1.bEnable := TRUE;
	fbDispenser2.bEnable := TRUE;
	fbDispenser3.bEnable := TRUE;
	
	IF bExecute THEN
		nState := 30; // Start
	END_IF
	
	30: // Start
	fbVereinzelung.benable := TRUE;
	fbTransport.bEnable := TRUE;
	fbDispenser1.bEnable := TRUE;
	fbDispenser2.bEnable := TRUE;
	fbDispenser3.bEnable := TRUE;
	
	fbVereinzelung.bExecute := TRUE;
	fbTransport.bExecute := TRUE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	eState := eBetriebszustand.Production;
	
	nStation := 1;

	IF fbVereinzelung.estate = eBetriebszustand.done AND 
		fbTransport.estate = eBetriebszustand.done THEN
		nstate := 31; // Extruder 1
	END_IF
		
	31: // Extruder 1
	nStation := 1;
	fbDispenser1.bExecute := TRUE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	IF fbDispenser1.estate = eBetriebszustand.Done THEN 
		nstate := 32; // Bewegung zu 2.Station
	END_IF
		
	32:// Bewegung zu 2.Station
	nStation := 2;
	fbTransport.bExecute := TRUE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	IF fbTransport.eState = eBetriebszustand.done THEN
		nState := 33; // zweiter Extruder
	END_IF
	
	33: // zweiter Extruder
	nStation := 2;
	fbDispenser2.bExecute := TRUE;

	IF fbDispenser2.eState = eBetriebszustand.Done THEN 
		nstate := 34; // Bewegung zu 3.Station
	END_IF
	
	34: // Bewegung zu 3.Station
	nStation := 3;
	fbTransport.bExecute := TRUE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	IF fbTransport.eState = eBetriebszustand.done THEN
		nState := 35; // Extruder 3
	END_IF
	
	35: // Extruder 3
	nStation := 3;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := TRUE;
	
	IF fbDispenser3.estate = eBetriebszustand.done THEN
		nState := 36; // Bewegung zu Ende
	END_IF
	
	36: // Bewegung zu Ende
	nStation := 4;
	fbTransport.bExecute := TRUE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	IF fbTransport.eState = eBetriebszustand.done THEN
		nState := 40; //Done
	END_IF
	
	40: // Done
	
	estate:= eBetriebszustand.done;
	
	fbTransport.bExecute := FALSE;
	fbDispenser1.bExecute := FALSE;
	fbDispenser2.bExecute := FALSE;
	fbDispenser3.bExecute := FALSE;
	
	
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="FB_Abfuellmodul">
      <LineId Id="237" Count="8" />
      <LineId Id="235" Count="1" />
      <LineId Id="248" Count="11" />
      <LineId Id="213" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="273" Count="5" />
      <LineId Id="272" Count="0" />
      <LineId Id="261" Count="0" />
      <LineId Id="280" Count="5" />
      <LineId Id="279" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="288" Count="5" />
      <LineId Id="287" Count="0" />
      <LineId Id="294" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="40" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="43" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="45" Count="5" />
      <LineId Id="52" Count="1" />
      <LineId Id="55" Count="12" />
      <LineId Id="54" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="78" Count="3" />
      <LineId Id="77" Count="0" />
      <LineId Id="82" Count="3" />
      <LineId Id="76" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="297" Count="3" />
      <LineId Id="296" Count="0" />
      <LineId Id="301" Count="0" />
      <LineId Id="87" Count="1" />
      <LineId Id="92" Count="1" />
      <LineId Id="91" Count="0" />
      <LineId Id="188" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="104" Count="1" />
      <LineId Id="109" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="102" Count="1" />
      <LineId Id="110" Count="3" />
      <LineId Id="101" Count="0" />
      <LineId Id="114" Count="2" />
      <LineId Id="118" Count="1" />
      <LineId Id="117" Count="0" />
      <LineId Id="120" Count="3" />
      <LineId Id="125" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="133" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="142" Count="2" />
      <LineId Id="148" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="150" Count="5" />
      <LineId Id="157" Count="0" />
      <LineId Id="160" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="162" Count="5" />
      <LineId Id="178" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="170" Count="1" />
      <LineId Id="169" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="172" Count="2" />
      <LineId Id="141" Count="0" />
      <LineId Id="180" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="182" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="183" Count="1" />
      <LineId Id="187" Count="0" />
      <LineId Id="181" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="29" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>