<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_Transport" Id="{2b71af40-e306-4ae2-a807-c5fa554971f8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Transport
VAR_INPUT
	bEnable : BOOL;
	bExecute : BOOL;
	nstation : INT;
	//Hardware Eingänge
	bSens1 : BOOL;
	bSens2 : BOOL;
	bSens3 : BOOL;
	bSens4 : BOOL;
END_VAR
VAR_OUTPUT
	eState : eBetriebszustand;
	bstopper1 : BOOL;
	bstopper2 : BOOL;
	bstopper3 : BOOL;
	
END_VAR
VAR
	fbTransportE : FB_TransportE;
	fbTransportLogik : FB_TransportLogik;
	fbTransportBand : FB_Foerderband;
	fbTransportA : FB_TransportA;
END_VAR
VAR_IN_OUT
	//Achsenreferenz
	ax : Axis_Ref;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbTransportE(
	bSens1:= bSens1, 
	bSens2:= bSens2, 
	bSens3:= bSens3, 
	bSens4:= bSens4, 
	bStation1=> , 
	bStation2=> , 
	bStation3=> , 
	bStation4=> );
	
	
fbTransportLogik(
	bEnable:= bEnable, 
	bExecute:= bExecute, 
	eStateE:= fbTransportBand.estate, 
	nStation:= nstation, 
	bStation1:= fbTransportE.bStation1, 
	bStation2:= fbTransportE.bStation2, 
	bStation3:= fbTransportE.bStation3, 
	bStation4:= fbTransportE.bStation4, 
	bEnableA=> , 
	bExecuteA=> , 
	bStopA=> , 
	eStateA=> estate, 
	bStop1=> , 
	bStop2=> , 
	bStop3=> );	
	
fbTransportBand(
	benable:= fbTransportLogik.bEnableA, 
	bexecute:= fbTransportLogik.bExecuteA, 
	bhalt:= fbTransportLogik.bStopA, 
	rVel:= 30, 
	eDirection:= MC_Positive_Direction, 
	estate=> , 
	ax:= ax);

fbTransportA(
	bstop1:= fbTransportLogik.bStop1, 
	bstop2:= fbTransportLogik.bStop2, 
	bstop3:= fbTransportLogik.bStop3, 
	bstopper1=> bStopper1, 
	bstopper2=> bStopper2, 
	bstopper3=> bStopper3);]]></ST>
    </Implementation>
    <LineIds Name="FB_Transport">
      <LineId Id="263" Count="42" />
      <LineId Id="43" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>