<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_TransportLogik" Id="{74920cd4-6420-42a1-ad89-7e43726d74c8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TransportLogik
VAR_INPUT
	bEnable : BOOL;
    bExecute : BOOL;
    eStateE : eBetriebszustand;
    nStation : INT;

    // Logiksignale -> Hardware Signale
    bStation1 : BOOL;
    bStation2 : BOOL;
    bStation3 : BOOL;
    bStation4 : BOOL;
END_VAR
VAR_OUTPUT
	bEnableA : BOOL;
    bExecuteA : BOOL;
    bStopA : BOOL;
    eStateA : eBetriebszustand;

    //Hardware Signale -> Logik
    bStop1 : BOOL;
    bStop2 : BOOL;
    bStop3 : BOOL;
    bStop4 : BOOL;
END_VAR
VAR
	nstate : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE nstate OF 
	0: //Off
	bEnableA := FALSE;
	bExecuteA := FALSE;
	bStopA := FALSE;
	bStop1 := FALSE;
	bStop2 := FALSE;
	bStop3 := FALSE;
	bStop4 := FALSE;
	
	IF bEnable THEN
		nstate := 1; //Init
	END_IF
	
	1: //Init
	bEnable := TRUE;
	bExecuteA := FALSE;
	bStopA := FALSE;
	bStop1 := FALSE;
	bStop2 := FALSE;
	bStop3 := FALSE;
	bStop4 := FALSE;

	IF eStateE = eBetriebszustand.ready THEN
		nstate := 2; //Ready
	END_IF

	2: //Ready
	bEnable := TRUE;
	bExecuteA := FALSE;
	bStopA := FALSE;
	bStop1 := FALSE;
	bStop2 := FALSE;
	bStop3 := FALSE;
	bStop4 := FALSE;
	
	IF bExecute THEN
		nstate := 3; //Förderband Start
	END_IF
	
	3: //Förderband Start
	
	bExecuteA := TRUE;
	IF (nStation -1) = 1 THEN
		bStop1 := TRUE;
	ELSIF (nStation - 1) = 2 THEN
		bStop2 := TRUE;
	ELSIF (nStation - 1) = 3 THEN
		bStop3 := TRUE;
	ELSIF (nStation - 1) = 4 THEN
		bStop4 := TRUE;
	END_IF
	
	IF bStation1 AND (nStation = 1) THEN
		nstate := 4; //Förderband Stop
	ELSIF bStation2 AND (nStation = 2) THEN
		nstate := 4; //Förderband Stop
	ELSIF bStation3 AND (nStation = 3) THEN
		nstate := 4; //Förderband Stop
	ELSIF bStation4 AND (nStation = 4) THEN
		nstate := 4; //Förderband Stop
	END_IF
	
	4: // Förderband Stop
	bExecute := FALSE;
	bStopA := TRUE;
	
	IF (nStation -1) = 1 THEN
		bStop1 := FALSE;
	ELSIF (nStation - 1) = 2 THEN
		bStop2 := FALSE;
	ELSIF (nStation - 1) = 3 THEN
		bStop3 := FALSE;
	ELSIF (nStation - 1) = 4 THEN
		bStop4 := FALSE;
	END_IF
	
	IF estateE = eBetriebszustand.done THEN
		nstate := 5; // Done
	END_IF
	
	5: // Done
	IF NOT bExecute THEN
		nstate := 2; // Ready
	END_IF
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="FB_TransportLogik">
      <LineId Id="9" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="40" Count="0" />
      <LineId Id="42" Count="7" />
      <LineId Id="41" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="53" Count="4" />
      <LineId Id="52" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="60" Count="1" />
      <LineId Id="63" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="65" Count="5" />
      <LineId Id="64" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="75" Count="3" />
      <LineId Id="80" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="95" Count="1" />
      <LineId Id="98" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="101" Count="2" />
      <LineId Id="105" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="109" Count="7" />
      <LineId Id="108" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="124" Count="3" />
      <LineId Id="36" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>